kubia-examples/kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-gpu
  labels:
    creation_method: manual
    env: dev
  annotations:
    name: me
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - name: kubia
      image: nkavtur/kubia:latest
      ports:
        - containerPort: 8080
          protocol: TCP
