kubia-examples/kubia-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-liveness
  labels:
    creation_method: manual
spec:
  containers:
    - name: kubia
      image: luksa/kubia-unhealthy
      ports:
        - containerPort: 8080
          protocol: TCP
      livenessProbe:
        httpGet:
          port: 8080
          path: /
