kubia-examples/kubia-manual-with-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-v2
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
    - name: kubia
      image: nkavtur/kubia:latest
      ports:
        - containerPort: 8080
          protocol: TCP1
