kubia-examples/kubia-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
spec:
  containers:
    - name: kubia
      image: nkavtur/kubia:latest
      ports:
        - containerPort: 8080
          protocol: TCP
