kubia-examples/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
spec:
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
